// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomNavBar should match snapshot on closed 1`] = `
<div>
  <div
    class="css-lrv8g5"
  >
    <div>
      <div
        class="css-drx1bz"
      >
        <a
          aria-current="page"
          class="nav__link nav__link--active"
          href="/"
        >
          <div
            class="outlined css-1xi8t4l"
          >
            <svg
              viewBox="0 0 14.214 17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.944 1s6.27 6.2 6.27 9.329A5.9 5.9 0 0 1 7.107 16 5.9 5.9 0 0 1 1 10.329C1 7.193 6.944 1 6.944 1z"
                fill="none"
                stroke="#707070"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </a>
        <div
          class="css-o0luf0"
        >
          <div
            class="css-1xi8t4l"
            data-testid="add"
          >
            <svg
              viewBox="0 0 14.999 14.999"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.328 13.828V8.672H1.172a1.172 1.172 0 0 1 0-2.344h5.156V1.172a1.172 1.172 0 0 1 2.344 0v5.156h5.156a1.172 1.172 0 0 1 0 2.344H8.672v5.156a1.172 1.172 0 0 1-2.344 0z"
                fill="#707070"
              />
            </svg>
          </div>
        </div>
        <a
          class="nav__link"
          href="/profile"
        >
          <div
            class="css-1xi8t4l"
          >
            <svg
              viewBox="0 0 15.286 21"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.643 9.071a4.286 4.286 0 1 0-4.286-4.285 4.286 4.286 0 0 0 4.286 4.286zm0-7.143a2.857 2.857 0 1 1-2.857 2.857 2.857 2.857 0 0 1 2.857-2.856zm0 8.571A7.143 7.143 0 0 0 .5 17.643v2.143a.715.715 0 0 0 1.429 0v-2.143a5.715 5.715 0 0 1 11.429 0v2.143a.715.715 0 0 0 1.429 0v-2.143A7.143 7.143 0 0 0 7.643 10.5z"
                fill="#707070"
                stroke="#707070"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="css-s56s06"
    >
      <ul>
        <li>
          <a
            href="/create"
          >
            Take a photo
          </a>
        </li>
        <li>
          <div
            class="css-rcl9j8"
          />
        </li>
        <li>
          <a
            href="/search"
          >
            Search in library
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="css-ajruyc"
  />
</div>
`;

exports[`BottomNavBar should match snapshot on open 1`] = `
<div>
  <div
    class="css-1lamfzg"
  >
    <div>
      <div
        class="css-1hqf3h3"
      >
        <h2>
          Want to make the family grow?
        </h2>
        <p>
          Take a photo of your plant
          <br />
          or search it in our database
        </p>
      </div>
      <div
        class="css-drx1bz"
      >
        <a
          aria-current="page"
          class="nav__link nav__link--active"
          href="/"
        >
          <div
            class="outlined css-1xi8t4l"
          >
            <svg
              viewBox="0 0 14.214 17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.944 1s6.27 6.2 6.27 9.329A5.9 5.9 0 0 1 7.107 16 5.9 5.9 0 0 1 1 10.329C1 7.193 6.944 1 6.944 1z"
                fill="none"
                stroke="#707070"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </a>
        <div
          class="css-qr370g"
        >
          <div
            class="css-989axa"
            data-testid="add"
          >
            <svg
              viewBox="0 0 14.999 14.999"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.328 13.828V8.672H1.172a1.172 1.172 0 0 1 0-2.344h5.156V1.172a1.172 1.172 0 0 1 2.344 0v5.156h5.156a1.172 1.172 0 0 1 0 2.344H8.672v5.156a1.172 1.172 0 0 1-2.344 0z"
                fill="#707070"
              />
            </svg>
          </div>
        </div>
        <a
          class="nav__link"
          href="/profile"
        >
          <div
            class="css-1xi8t4l"
          >
            <svg
              viewBox="0 0 15.286 21"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.643 9.071a4.286 4.286 0 1 0-4.286-4.285 4.286 4.286 0 0 0 4.286 4.286zm0-7.143a2.857 2.857 0 1 1-2.857 2.857 2.857 2.857 0 0 1 2.857-2.856zm0 8.571A7.143 7.143 0 0 0 .5 17.643v2.143a.715.715 0 0 0 1.429 0v-2.143a5.715 5.715 0 0 1 11.429 0v2.143a.715.715 0 0 0 1.429 0v-2.143A7.143 7.143 0 0 0 7.643 10.5z"
                fill="#707070"
                stroke="#707070"
              />
            </svg>
          </div>
        </a>
      </div>
    </div>
    <div
      class="css-s56s06"
    >
      <ul>
        <li>
          <a
            href="/create"
          >
            Take a photo
          </a>
        </li>
        <li>
          <div
            class="css-rcl9j8"
          />
        </li>
        <li>
          <a
            href="/search"
          >
            Search in library
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="css-1obqsrn"
  />
</div>
`;
